--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Header start -->
     <header>
         <nav>
-            <h3 class="nav-title">G3 Architects</h3>
+            <h3 class="section-title">G3 Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -45,6 +45,16 @@
                 <button class="btn-primary">Explore More</button>
 
             </div>
+        </section>
+        <!-- Features Section -->
+        <section class="features">
+
+        </section>
+
+        <!-- Section Facts -->
+        <section class="facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
         </section>
 
     </main>
